# grunt

./: .cursorrules  .dockerignore  .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
docs/modules/: API_LAYER.md  DATA_MANAGEMENT.md  EVENT_SYSTEM.md  STRATEGY_ENGINE.md  TRADING_ENGINE.md
src/: integration.py  main.py
src/api/: __init__.py  auth.py  models.py  rate_limiter.py  server.py
src/clients/: __init__.py  jupiter.py
src/config/: env.py  loader.py  types.py
src/config/templates/: data_processors.json  strategy_templates.json  strategy_templates.yaml
src/data_management/: __init__.py  database.py  market_data.py  state.py
src/events/: __init__.py  event_manager.py  event_types.py
src/strategy_engine/: __init__.py  base.py  manager.py  models.py
src/strategy_engine/strategies/: __init__.py  ma_crossover.py
src/trading_engine/: engine.py  models.py  order_manager.py  position_manager.py
